updating dh25 draft

--- a/writings/notecards.org
+++ b/writings/notecards.org
@@ -373,7 +373,7 @@ some circumstances and reads as butch in others, and considers herself
 not to be a woman but maintains distance from the category 'man'? For
 such a subject, identity might be best described as a process with
 multiple sites for becoming and being. To understand such a process,
-we would need to do more than map psychic and physical journies
+we would need to do more than map psychic and physical journeys
 between male and female within queer and straight space; we would
 need, in fact, to think in fractal terms and about gender geometries"
 (21).
@@ -1742,6 +1742,78 @@ engages with. The desire for what is not yet here is both radical and
 conforming, because it aspires toward the utopian, the
 collectivity. There seems to be a lot of crossover here.
 
+**** Bey, Marquis. Cistem Failure: Essays on Blackness and Cisgender. Duke University Press, 2022.
+Wants gender abolition, which also means expanding what we mean by
+blackness, beyond epidermalization. 
+
+"Might it mean that arriving at, or near, that Spillersian 'place for
+this different social subject' will be a place that many of y'all may
+not be readin gfor, an abolitionist place that does not abide the
+trappings of legibility you snuggle with even when trying to bring
+about a radically just world?" (xv).
+
+"I surely was not born this way, which is to say on this side, cis,
+etymologically. I was very deliberately, very meticulously, crated
+through violent means to remain on this side" (18).
+
+"The they/them at the linguistic register of blackness highlights a
+they/them, or a disrespect for cisgender and its coerced alignment, at
+the gendered level of blackness" (54).
+
+"What I am trying to suggest in a language that takes on the tneor of
+its source is how language spun through the annals of blackness by
+what we can tentatively call black folks, or black milius, allows for
+another possible subject to emerge not simply when the subject
+isunknown but when the subject is 'known' but not captured. In other
+words, they ain't gotta be unknown to be 'they,' and in the
+possibility of being they yet known, thye become possible in another
+kind of way" (55).
+
+"Reverbatory in the black and blackened /they/ is a sort of
+mellifluously daimonic linguistic genius whereby ungrammatical
+iterations reconfigure subjective possiblity. The radical inclusivity
+characteristic of black sociality, where black sociality denotes an
+edgeless edginess with the capacity to hold all, has endemic to it a
+transed modality... Loving the mutable, the shifting shiftiness that
+slides in a pronoun, engendering someone's multiplicity, is our
+constant coalitional dislocation" (57).
+
+"a being-and-becoming-with ostensible only when we recognize another's
+unrecognizability as the vehicle through which they become
+recognizable in a way not predicated on violence" (57).
+
+"I would like some other kind of being, ungendered or nongendered or
+too enthralled with something else there is no time to consider
+gender" (96).
+
+"what you want is unspecific nonrecognition" (107).
+
+Identity is the "master's tools" -- "an understanding of ourselves as
+beings who possess the property equivalent to the things we have been
+told we must, and can never not, be" is a "project invested in capital
+accumulation, in ownership, in exclusion, and immutability and its
+tethers fixing knowledge... you /are/ this thing that we tell you you
+are, a thing in hierarchical relation, a thing in mutually
+exclusionary relation" (130).
+
+"to have dominion over something even if it is oneself" (130).
+
+"Gender abolition is about coalition for me; it is about a refusal of
+individuation, about coming together and knowing that we are already
+together" (130).
+
+We don't need "women" for feminism: "oppression /created/ the class of
+women, not the other way around" (131).
+
+"The very notion of 'identity' is a bad philosophical project that has
+held soverign sway over how we've understood what is possible for us"
+(133).
+
+"The condition for freedom to constitute our emergence with and
+through one another is one in which we give up knowlege of the other"
+(144) ... It founds another way of loving not requiring capturative
+knowledge of someone or something in its entirety. Love can arise in,
+precisely, the not knowing" (145).
 **** Chu, Andrea Long, and Emmett Harsin Drager. "After trans studies." Transgender Studies Quarterly 6.1 (2019): 103-116.
 
 Trans studies is not / has not been what it could be. It has been
